# aura-glow

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
app/: pubspec.yaml
app/lib/: main.dart
apps/demo/: main.cpp
docs/: ALGORITHM.md  ARCHITECTURE.md  QUICKSTART.md
engine/: CMakeLists.txt
engine/include/: auraglow.h
engine/include/auraglow/: engine_rust.h
engine/src/: auraglow.cpp  demo.cpp  engine.cpp
rust/: Cargo.toml
rust/auraglow/: Cargo.toml
rust/auraglow-cli/: Cargo.toml
rust/auraglow/src/: lib.rs
scripts/: demo.ps1  doctor.ps1  verify.ps1
shaders/: hair_dye.glsl  keratin.glsl  skin_sss.glsl
